--- a/src/scss/sections/gallery.scss
+++ b/src/scss/sections/gallery.scss
@@ -79,6 +79,12 @@
     &.swiper {
       width: 100dvw;
     }
+
+    transform: translateX(-2rem);
+
+    @media (min-width: 49.01em) {
+      transform: translateX(-1.1rem);
+    }
   }
 
   // .gallery__wrapper
